--- a/popup/popup.html
+++ b/popup/popup.html
@@ -1,7 +1,15 @@
+<head>
+    <link rel="stylesheet" href="popup.css">
+</head>
+
 <h1>Email Finder</h1>
 
-<button id="reset" readonly="true">Reset</button>
+<section id="status">
+    <span></span>
+    <button id="reset" onclick="reset">Reset</button>
+    <br>
+</section>
 
-<textarea></textarea>
+<textarea rows="15" style="width: 100%" readonly="true"></textarea>
 
 <script src="popup.js"></script>
